fixed linebreak on about page

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -17,7 +17,13 @@
   box-sizing: border-box;
   padding: 1.5rem 2rem;
   text-align: center;
+max-width: "80%" 
+}
 
+@media screen and (max-width: 830px) {
+    .aboutHeader {
+    white-space: wrap;
+    }
 }
 
 .aboutContent {
